--- a/charts/drone/values.yaml
+++ b/charts/drone/values.yaml
@@ -108,7 +108,7 @@ persistentVolume:
   ## Ref: http://kubernetes.io/docs/user-guide/persistent-volumes/
   ##
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
 
   ## Drone server data Persistent Volume annotations
   ##
